--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.57.2",
     "autoprefixer": "^10.4.20",
     "lucide-react": "^0.542.0",
     "postcss": "^8.4.38",
